same as previous

--- a/FilmStockWidget/Info.plist
+++ b/FilmStockWidget/Info.plist
@@ -7,5 +7,7 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widgetkit-extension</string>
 	</dict>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2025. All rights reserved.</string>
 </dict>
 </plist>
