added TOS and compliance shit cleaned code a bit

--- a/FilmStockWidget/Info.plist
+++ b/FilmStockWidget/Info.plist
@@ -8,6 +8,6 @@
 		<string>com.apple.widgetkit-extension</string>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2025. All rights reserved.</string>
+	<string>Copyright © 2024 Jonas Halbe. All rights reserved.</string>
 </dict>
 </plist>
