--- a/FilmStockWidgetExtension.entitlements
+++ b/FilmStockWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.halbe.no.FilmStock</string>
+		<string>group.app.halbe.no.FilmStock</string>
 	</array>
 </dict>
 </plist>
