- renamed app - fixed inapp popover + storekit warning - added storekit config for testing - fixed small missing translation

--- a/Analog FilmStock.xcodeproj/xcshareddata/xcschemes/FilmStock.xcscheme
+++ b/Analog FilmStock.xcodeproj/xcshareddata/xcschemes/FilmStock.xcscheme
@@ -16,9 +16,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "95D20FB62EB901CB00EF7348"
-               BuildableName = "FilmStock.app"
-               BlueprintName = "FilmStock"
-               ReferencedContainer = "container:FilmStock.xcodeproj">
+               BuildableName = "Analog FilmStock.app"
+               BlueprintName = "Analog FilmStock"
+               ReferencedContainer = "container:Analog FilmStock.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -45,11 +45,14 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "95D20FB62EB901CB00EF7348"
-            BuildableName = "FilmStock.app"
-            BlueprintName = "FilmStock"
-            ReferencedContainer = "container:FilmStock.xcodeproj">
+            BuildableName = "Analog FilmStock.app"
+            BlueprintName = "Analog FilmStock"
+            ReferencedContainer = "container:Analog FilmStock.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../FilmStock/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -62,9 +65,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "95D20FB62EB901CB00EF7348"
-            BuildableName = "FilmStock.app"
-            BlueprintName = "FilmStock"
-            ReferencedContainer = "container:FilmStock.xcodeproj">
+            BuildableName = "Analog FilmStock.app"
+            BlueprintName = "Analog FilmStock"
+            ReferencedContainer = "container:Analog FilmStock.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
